# vstools

./: Changelog  references.props
QMakeFileReader/: qmakefilereader.vcxproj
QrcEditor/: qrceditor.vcxproj
QtMSBuild/QtMsBuild/: qt_build.targets  qt_defaults.props  qt_private.props  qt_vars.targets  readme.md
QtMSBuild/QtMsBuild/moc/: qtmoc.targets
QtMSBuild/QtMsBuild/qml/: qtqml_static.targets
QtVsTools.Core/: VersionInformation.cs
QtVsTools.Core/CMake/: CMakeProject.Messages.cs  CMakeProject.cs
QtVsTools.Core/Common/: Concurrent.cs
QtVsTools.Core/Common/Json/: DeferredObject.cs  Serializable.cs  Serializer.cs
QtVsTools.Core/MsBuild/: MsBuildProject.Build.cs
QtVsTools.Core/Options/: QtOptionsPage.cs  QtOptionsPageSettings.cs  QtVersionsTable.cs
QtVsTools.Core/ProjectImport/: ProjectImporter.cs
QtVsTools.Core/VisualStudio/: VsSearch.cs
QtVsTools.Package/: QtVsToolsPackage.cs
QtVsTools.Package/Editors/: Editor.QtDesigner.cs  Editor.QtLinguist.cs  Editor.QtResourceEditor.cs  Editor.cs
QtVsTools.Package/MsBuild/: ConversionReportViewer.cs
QtVsTools.Package/Package/: DteEventsHandler.cs  QtHelp.cs  QtItemContextMenu.cs  QtMainMenu.cs  QtProjectContextMenu.cs  QtSolutionContextMenu.cs  Translation.cs
QtVsTools.Package/QML/Debugging/: QmlDebugLauncher.cs  QmlFileSystem.cs
QtVsTools.Package/QML/Debugging/AD7/: QmlDebugAD7Breakpoint.cs  QmlDebugAD7Program.cs
QtVsTools.Package/TestAdapter/: QtTestGlobalSettingsService.cs
QtVsTools.TestAdapter/: Binary.cs  Logger.cs  PdbParser.cs  ProcessMonitor.cs  QtTestDiscoverer.cs  QtTestExecutor.cs  QtTestPage.cs  QtTestSettings.cs  QtTestSettings.xsd
QtVsTools.Wizards/ProjectWizard/: ProjectTemplateWizard.CMake.cs
Templates/console/: CMakeLists.txt
Templates/designer/: CMakeLists.txt
Templates/empty/: CMakeLists.txt
Templates/gui/: CMakeLists.txt
Templates/lib/: CMakeLists.txt
Templates/quick/: CMakeLists.txt
Templates/test/: .runsettings  CMakeLists.txt
Tests/ProjectFormats/CMake/QtQuickApplication/: CMakeLists.txt
Tests/ProjectFormats/CMake/QtWidgetsApplication/: CMakeLists.txt
Tests/ProjectTemplates/QtQuickApplication/: QtQuickApplication.vcxproj  main.cpp
Tests/Test_QtMsBuild.Build/: MsBuild.cs  Test_BigSolution.cs  Test_Pch.cs  Test_QmlStatic.cs  Test_QtMsBuild.Build.csproj
Tests/Test_QtVsTools.Core/: Test_Utils.cs
Tests/system/suite_configuration/tst_new_project_file_creation/: test.py
VsQml/: vsqml.vcxproj
doc/src/: qtvstools.qdoc
